Frontend: base